--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,47 +4,81 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#3ebeda"
+        android:id="@+id/main_layout"
         tools:context=".MainActivity">
 
     <SurfaceView
-            android:layerType="hardware"
             android:id="@+id/surface_view1"
             android:layout_width="match_parent"
             android:layout_gravity="center"
             android:layout_height="match_parent"/>
 
-    <SurfaceView
-            android:layerType="hardware"
-            android:id="@+id/surface_view2"
-            android:layout_width="630px"
-            android:layout_gravity="top|center_horizontal"
-            android:layout_height="220px"/>
+    <TextureView
+            android:id="@+id/texture_view1"
+            android:layout_width="match_parent"
+            android:layout_gravity="center"
+            android:layout_height="match_parent"/>
 
-    <SurfaceView
-            android:layerType="hardware"
-            android:id="@+id/surface_view3"
+    <TextureView
+            android:id="@+id/texture_view"
             android:layout_width="630px"
             android:layout_gravity="center"
             android:layout_height="220px"/>
 
-    <SurfaceView
-            android:layerType="hardware"
-            android:id="@+id/surface_view4"
-            android:layout_width="630px"
-            android:layout_gravity="bottom|center_horizontal"
-            android:layout_height="220px"/>
+    <!--<SurfaceView-->
+    <!--android:id="@+id/surface_view2"-->
+    <!--android:layout_width="630px"-->
+    <!--android:layout_gravity="center_horizontal|top"-->
+    <!--android:layout_height="220px"/>-->
 
-    <Button
-            android:text="暂停"
-            android:layout_width="wrap_content"
-            android:layout_gravity="end"
-            android:layout_height="wrap_content"
-            android:id="@+id/cancel_btn"/>
+    <!--<SurfaceView-->
+    <!--android:id="@+id/surface_view3"-->
+    <!--android:layout_width="630px"-->
+    <!--android:layout_gravity="center"-->
+    <!--android:layout_height="220px"/>-->
+
+    <!--<SurfaceView-->
+    <!--android:id="@+id/surface_view4"-->
+    <!--android:layout_width="630px"-->
+    <!--android:layout_gravity="center_horizontal|bottom"-->
+    <!--android:layout_height="220px"/>-->
+
     <Button
             android:text="开始"
             android:layout_width="wrap_content"
             android:layout_gravity="start"
             android:layout_height="wrap_content"
             android:id="@+id/start_btn"/>
+
+
+    <Button
+            android:text="暂停"
+            android:layout_width="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_height="wrap_content"
+            android:id="@+id/pause_btn"/>
+
+
+    <Button
+            android:text="取消"
+            android:layout_width="wrap_content"
+            android:layout_gravity="end"
+            android:layout_height="wrap_content"
+            android:id="@+id/cancel_btn"/>
+
+    <Button
+            android:text="释放"
+            android:layout_width="wrap_content"
+            android:layout_gravity="end|bottom"
+            android:layout_height="wrap_content"
+            android:id="@+id/release_btn"/>
+
+
+    <ImageView
+            android:id="@+id/image_view"
+            android:layout_width="500dp" android:layout_height="500dp"
+            android:layout_gravity="center"
+            android:translationZ="3dp"
+            android:background="@mipmap/ic_launcher"/>
+
 </FrameLayout>
