--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,11 +7,11 @@
         android:id="@+id/main_layout"
         tools:context=".MainActivity">
 
-    <SurfaceView
-            android:id="@+id/surface_view1"
-            android:layout_width="match_parent"
-            android:layout_gravity="center"
-            android:layout_height="match_parent"/>
+    <!--<SurfaceView-->
+            <!--android:id="@+id/surface_view1"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_gravity="center"-->
+            <!--android:layout_height="match_parent"/>-->
 
     <!--<TextureView-->
     <!--android:id="@+id/texture_view1"-->
